--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.0-next.98",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.2",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.4"
   }
 }
